apps-external/stirling-pdf/stirling-pdf-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirling-pdf
  namespace: apps-external
spec:
  parentRefs:
    - name: main-gateway
      namespace: system-ingress
      sectionName: websecure
  hostnames:
    - pdf.urosevicvuk.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stirling-pdf
          port: 8080
